syntax = "proto3";

package store_v1;

option go_package = "github.com/scipie28/test-grpc-server/api/store_v1";

service ProductInfo {
  rpc addProduct(Product) returns (ProductID);
  rpc getProduct(ProductID) returns (Product);
}

message ProductID {
  string value = 1;
}

message Product {
  string id = 1;
  string name = 2;
  string description = 3;
  float price = 4;
}